# flip-cards

./: .env.template  .gitignore  README.md  pyproject.toml
src/flip_cards/: app.py  app_utils.py  config.py
